--- a/src/components/MessageList/index.scss
+++ b/src/components/MessageList/index.scss
@@ -1,21 +1,45 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,500,600,700,800,900);
 
 .messages-container {
-  flex: auto;
   position: relative;
-  height: auto;
+  flex: auto;
+  flex-direction: column;
+  height: 86vh;
+  width: 100%;
   padding: 0px 10px 0px 10px;
   margin-left: 10px;
   margin-top: -14px;
   background: #fff;
-  overflow-y: auto;
   font-family: Lato;
+  overflow-y: auto;
+  overflow-x: hidden;
+  justify-content: stretch;
+}
+
+.inner {
+  max-height: 100%;
+  width: 100%;
+  flex: 1;
+  position: absolute;
+  bottom: 0vh;
+}
+
+
+.day-section {
+  position: relative;
+  display: flex;
+  width: 100%;
+}
+
+.day-subsection {
+  width: 92%;
 }
 
 .daydivider {
   position: relative;
   margin: 1rem 0;
   text-align: center;
+  width: 100%;
   &::after {
     position: absolute;
     top: 50%;
@@ -28,6 +52,7 @@
 }
 .daytext {
   z-index: 1;
+  width: 100%;
   position: relative;
   background: #fff;
   padding: 0 12px;
@@ -35,17 +60,9 @@
   font-weight: 500;
 }
 
-.inner {
-  overflow: none;
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
 
-.messages-list {
-  overflow:   auto;
-  position:   absolute;
-  bottom:     0;
-  max-height: 100%;
-  width: inherit;
+.messages-end {
+  border: black 4px solid;
+  position: absolute;
+  bottom: 0px;
 }
